simulations.h

#ifndef simulations_h
#define simulations_h

#include "iolayer.h"

void simulate_streamer_record(struct llio_t *llio);
void simulate_free_segments_record(struct llio_t *llio);

#endif // simulations_h